# netbox-powerdns-sync

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
netbox_powerdns_sync/: __init__.py  choices.py  constants.py  exceptions.py  fields.py  filtersets.py  jobs.py  models.py  naming.py  navigation.py  querysets.py  record.py  signals.py  tables.py  urls.py  utils.py  validators.py
netbox_powerdns_sync/api/: nested_serializers.py  serializers.py  urls.py  views.py
netbox_powerdns_sync/forms/: __init__.py  filtersets.py  model_forms.py  sync.py
netbox_powerdns_sync/migrations/: 0001_initial.py
netbox_powerdns_sync/templates/netbox_powerdns_sync/: apiserver.html  sync_result.html  sync_schedule.html  syncs.html  zone.html
netbox_powerdns_sync/templates/netbox_powerdns_sync/htmx/: sync_result.html
netbox_powerdns_sync/tests/: test_load.py
netbox_powerdns_sync/tests/api_server/: test_api.py  test_views.py
netbox_powerdns_sync/tests/integration/: test_server.py
netbox_powerdns_sync/views/: __init__.py  api_servers.py  syncs.py  zones.py
testing/: configuration.testing.py
